proj2: try to impl merge command